overflow vertical fix

--- a/components/QuizComponent/Upcomming.module.css
+++ b/components/QuizComponent/Upcomming.module.css
@@ -2,11 +2,11 @@
     margin-top: 20px;
     max-width: 100%;
     width: 100vw;
-    max-height: 782px;
+    min-height: 782px;
     display: flex;
     flex-direction: column;
     border-radius: 10px;
-    overflow-y: auto; 
+    /* overflow-y: auto;  */
     overflow-x: auto; 
 }
 
